--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     </style>
   </head>
   <body style="background-color:#000000">
-    <div style="width:50%; margin-left:25%; color:#ffffff; text-align:center; font-size:18">
-      <br>
-      <p style="font-size:24">The workers' movement is here to stay, no matter the subreddit.</p>
+    <div style="width:60%; margin-left:20%; margin-top:30pt; color:#ffffff; text-align:center; font-family:sans-serif; font-size:18">
+      <p style="font-size:26; font-weight:bold">The workers' movement is here to stay, no matter the subreddit.</p>
       <p><span style="color: #a83232">/r/LateStageCapitalism</span> - Abandoned due to mods deleting posts and comments that criticized China's authoritarian state-capitalist government, which has been forcing Uyghur people into slave labor.</p>
-      <p><span style="color: #a83232">/r/antiwork</span> - Abandoned due to mods deleting posts and comments that criticized mod u/AbolishWork's interview on Fox News, which had nobody's approval and severely misrepresented the movement.</p>
-      <p style="font-size:32">Join us (for now) on <a href="https://reddit.com/r/WorkReform">/r/WorkReform</a></p>
+      <p><span style="color: #a83232">/r/antiwork</span> - Abandoned due to mods deleting posts and comments that criticized mod /u/AbolishWork's interview on Fox News, which had nobody's approval and severely misrepresented the movement.</p>
+      <p style="font-size:36">Join us (for now) on <a href="https://reddit.com/r/WorkReform">/r/WorkReform</a></p>
+      <br><br><br>
+      <p style="font-size:13">This page is not affiliated with anything, including any account or website with a similar or identical name.</p>
     </div>
   </body>
 </html>
